--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://duxpixels.github.io/touchshare"
+  "homepage":"https://mohammadabdulhakim.github.io/touchshare"
   "name": "TouchShare",
   "version": "0.1.0",
   "private": true,
