--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage":"https://mohammadabdulhakim.github.io/touchshare"
   "name": "TouchShare",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +17,7 @@
     "react-loader-spinner": "^5.1.5",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "timeago.js": "^4.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
